--- a/Lists_And_Dictionaries.mkd
+++ b/Lists_And_Dictionaries.mkd
@@ -1,3 +1,26 @@
  # Introduction to list and Dictionaries
  
- A list is a container, which is an object that groups related objects together. A list is also a sequence; thus, the contained objects maintain a left-to-right positional ordering.
+ A list is a container, which is an object that groups related objects together.
+ A list is also a sequence that have a left to right positional ordering. Therefore, the list can be accesed through indexing.
+ A list is also mutable. Therefore, it is able to be changed without the program having to replace the entire with a copy.  
+ Example of a common list ---> my_list = ['hello', -4.2, 5]
+ 
+ *How is a list created*
+ 1. Through using brackets [].
+ 2. Through using the python built-in function: list() ex. my_list = list('123') -----> print(my_list)
+ 
+ Basics of a list
+ 
+my_list = [1, 2, 3]	  ------> Creates a list ---->  	my_list = [1, 2, 3]                        ------> Output: [1, 2, 3]
+list(iter)	           ------> Creates a list ----> 	 my_list = list('123')                      ------> Output: ['1', '2', '3']
+my_list[i]          	 ------> Get an element ---->  	my_list = [1, 2, 3],print(my_list[1])	     ------> Output:  2
+my_list1 + my_list2	  ------> my_list2 added to my_list1 ---->	my_list = [1, 2] + [3]           ------> Output: [1, 2, 3]
+my_list[i] = x	        -----> Change the value  element  ---->	my_list = [1, 2, 3]              ------> Output:[1, 2, 9]
+                                                               my_list [2] = 9 
+my_list[len(my_list):] = [x]	----> Add the elements in [x] to the end of my_list-->	my_list = [1, 2, 3] --> Output:[1, 2, 3, 9]
+                                                                                    my_list[len(my_list):] = [9] 
+del my_list[i]	       ------> Delete an element from a list.	my_list= [1, 2, 3,]                ------> Output:[1, 3]
+                                                             del my_list[1] 
+	
+
+ 
