--- a/Lists_And_Dictionaries.mkd
+++ b/Lists_And_Dictionaries.mkd
@@ -8,19 +8,39 @@
  *How is a list created*
  1. Through using brackets [].
  2. Through using the python built-in function: list() ex. my_list = list('123') -----> print(my_list)
- 
- Basics of a list
- 
-my_list = [1, 2, 3]	  ------> Creates a list ---->  	my_list = [1, 2, 3]                        ------> Output: [1, 2, 3]
-list(iter)	           ------> Creates a list ----> 	 my_list = list('123')                      ------> Output: ['1', '2', '3']
-my_list[i]          	 ------> Get an element ---->  	my_list = [1, 2, 3],print(my_list[1])	     ------> Output:  2
-my_list1 + my_list2	  ------> my_list2 added to my_list1 ---->	my_list = [1, 2] + [3]           ------> Output: [1, 2, 3]
-my_list[i] = x	        -----> Change the value  element  ---->	my_list = [1, 2, 3]              ------> Output:[1, 2, 9]
-                                                               my_list [2] = 9 
-my_list[len(my_list):] = [x]	----> Add the elements in [x] to the end of my_list-->	my_list = [1, 2, 3] --> Output:[1, 2, 3, 9]
-                                                                                    my_list[len(my_list):] = [9] 
-del my_list[i]	       ------> Delete an element from a list.	my_list= [1, 2, 3,]                ------> Output:[1, 3]
-                                                             del my_list[1] 
+
+
+### Modification of a list 
+
+*Example of modification of a list
+1. my_list  = [ 'h', 'e', 'l', 'l', 'o' ] = hello 
+2. my_list[len(my_list):] = [ ' ', 'w', 'o', 'r', 'l', 'd', '.' ] = hello world
+3. my_list[11] = '!' = hello world!
+del my_list[5] = helloworld!
+
+*Example 2
+### code - In-place modification of a list
+    my_teams = ['Raptors', 'Heat', 'Nets']
+    your_teams = my_teams  # Create a shared reference to same list
+
+	  my_teams[1] = 'Lakers'  # Modify list element
+
+	  print('My teams are:', my_teams)  # Both variables have changed
+	  print('Your teams are:', your_teams)  # Both variables have changed
+OUTPUT: My teams are: ['Raptors', 'Lakers', 'Nets']
+        Your teams are: ['Raptors', 'Lakers', 'Nets']
+
+		
+### code - In-place modification of a copy of a list
+    my_teams = ['Raptors', 'Heat', 'Nets']
+	  your_teams = my_teams[:]  # Assign your teams to a COPY of my_teams
 	
+    my_teams[1] = 'Lakers'  # Modify list element
+	
+	  print('My teams are:', my_teams)  # List element has changed
+    print('Your teams are:', your_teams)  # List element has not changed
+OUTPUT: My teams are: ['Raptors', 'Lakers', 'Nets']
+        Your teams are: ['Raptors', 'Heat', 'Nets']
+
 
  
