--- a/Classes_and_Objects.mkd
+++ b/Classes_and_Objects.mkd
@@ -1,12 +1,12 @@
 # Introduction to Classes and Objects
 
-## Objects
-### In the Python program, an object is made up of some internal data items and operations that can be performed on that data. 
+### Objects
+#### In the Python program, an object is made up of some internal data items and operations that can be performed on that data. 
 
 For example, if you wanted to create a cooking program where you can log your ingredient amounts and type, you may need a program to record the amount, ingredient type, and ingredient name in order to compute the totla formula for a specific food item. In the end, you would have " 500g of floor", "2 eggs", " 1 cup of milk" will create "pancake."  A programmer might think of an "object" called IngredientList. 
 
-## Classes
-### In the Python program, a class creates a new type of object. The object maintains a set of attributes that determines the data and behavior of the class. 
+### Classes
+#### In the Python program, a class creates a new type of object. The object maintains a set of attributes that determines the data and behavior of the class. 
 
 *How to create a class*
 OBJECT. ATTRIBUTE
